fixed text not wrapping correctly

--- a/src/styles.css
+++ b/src/styles.css
@@ -110,7 +110,7 @@ body {
 
 .tile--left p {
     margin: 0;
-    
+
 }
 
 .upvote--counter {
@@ -119,7 +119,9 @@ body {
 
 .tile--right {
     margin: 0 25px 0 0;
-    width: 100%;
+    width: 90%;
+    word-wrap: break-word;
+    white-space: normal;
 }
 
 .tile--right h3 {
@@ -130,6 +132,7 @@ body {
     line-height: 1.5em;
     width: 97.5%;
     margin: 0 auto;
+
 }
 
 .tile img {
@@ -197,7 +200,12 @@ hr {
     position: relative;
     top: 5px;
     padding-bottom: 10px;
+
+    
 }
+
+
+
 
 h4 {
     margin-block-start: 0;
@@ -211,7 +219,7 @@ p {
 
 .comments--section {
     margin: 0;
-    
+
 }
 
 .downvote {
